@@ -1,4 +1,9 @@
 2006-04-21 Mikhail Khodjaiants
+	Don't create pty when using gdbserver.
+	* AbstractGDBCDIDebugger.java
+	* GDBServerCDIDebugger2.java
+
+2006-04-21 Mikhail Khodjaiants
 	Close the pty if the session creation failed.
 	* MIPlugin.java
  
